--- a/redsheet-portal/src/app/components/email-transaction/email-reply/email-reply/email-reply.component.html
+++ b/redsheet-portal/src/app/components/email-transaction/email-reply/email-reply/email-reply.component.html
@@ -20,7 +20,7 @@
               </div>
             </div>
           <div class="modal-footer border-0 row justify-content-around align-items-center">
-              <button type="button" class="m-0 px-5 py-0 btn btn-info btn-md" (click)="Cancle()"><p class="mx-2 my-0 p-2 ">Cancle</p></button>
+              <button type="button" class="m-0 px-5 py-0 btn btn-info btn-md" (click)="Cancel()"><p class="mx-2 my-0 p-2 ">Cancel</p></button>
               <button class="m-0 px-5 py-0 btn btn-primary btn-md " (click)="SendMessage()" [disabled]="message.length<=0"><p class="mx-2 my-0 p-2">Send Message</p></button>
           </div>
         </div>
