--- a/redsheet-portal/src/app/components/project-module/project-modules/lock-module-for-review/lock-module-for-review.component.html
+++ b/redsheet-portal/src/app/components/project-module/project-modules/lock-module-for-review/lock-module-for-review.component.html
@@ -14,7 +14,7 @@
           <p class="text-muted">This will lock this stage of the project for reviewers to provide feedback.</p>
         </div>
         <div class="modal-footer border-0 row justify-content-around align-items-center">
-          <button class="m-0 px-5 py-1 btn btn-info btn-md" (click)="Cancle()"  >{{"Cancle" | uppercase}}</button>
+          <button class="m-0 px-5 py-1 btn btn-info btn-md" (click)="Cancel()"  >{{"Cancel" | uppercase}}</button>
           <button class="m-0 py-1 btn btn-info btn-md" (click)="NextModule()">{{"Continue to " | uppercase}}{{next.templateModuleName | uppercase}} </button>
       </div>
       </div>
