--- a/redsheet-portal/src/app/components/dashboard/message-users/message-users/message-users.component.html
+++ b/redsheet-portal/src/app/components/dashboard/message-users/message-users/message-users.component.html
@@ -27,7 +27,7 @@
             </div>
           </div>
         <div class="modal-footer border-0 row justify-content-around align-items-center">
-            <button type="button" class="m-0 px-5 py-0 btn btn-info btn-md" (click)="Cancle()"><p class="mx-2 my-0 p-2 ">Cancle</p></button>
+            <button type="button" class="m-0 px-5 py-0 btn btn-info btn-md" (click)="Cancel()"><p class="mx-2 my-0 p-2 ">Cancel</p></button>
             <button class="m-0 px-5 py-0 btn btn-primary btn-md " [disabled]="MessageObject.EmailTo.length<=0 || message.length<=0" (click)="SendMessage()"><p class="mx-2 my-0 p-2">Send Message</p></button> <!-- (click)="SendMessage()" [disabled]="message.length<=0" -->
         </div>
       </div>
